--- a/components/Nav.module.css
+++ b/components/Nav.module.css
@@ -1,3 +1,7 @@
 .nav {
   display: block;
+  height: 0;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
