--- a/components/ProjectHero.module.css
+++ b/components/ProjectHero.module.css
@@ -4,6 +4,8 @@
  */
 .section {
   width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .row {
